--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@cantoo/pdf-lib": "^2.3.2",
     "@tailwindcss/vite": "^4.0.14",
     "tailwindcss": "^4.0.14"
   }
