--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "svelte": "^5.20.2",
     "svelte-check": "^4.1.4",
     "svelte-routing": "^2.13.0",
-    "typescript": "~5.7.2",
+    "typescript": "^5.9.2",
     "vite": "^6.2.0"
   },
   "dependencies": {
